Poslednje promene u BookEvent

--- a/BookEvent/administrator/languages/en-GB/com_book_event.ini
+++ b/BookEvent/administrator/languages/en-GB/com_book_event.ini
@@ -109,7 +109,20 @@ COM_BOOK_EVENT_TITLE_LIST_VIEW_BOOKEVENTS = "BookEvents"
 COM_BOOK_EVENT_TITLE_LIST_VIEW_BOOKEVENTS_DESC = "Show a list of BookEvents"
 COM_BOOK_EVENT_TITLE_ITEM_VIEW_BOOKEVENT = "Single Bookevent"
 COM_BOOK_EVENT_TITLE_ITEM_VIEW_BOOKEVENT_DESC = "Show a specific Bookevent"
-
+COM_BOOK_EVENT_TITLE_BOOKINGS="Bookings"
+COM_BOOK_EVENT_BOOKINGS_DESC="Manage event bookings"
+COM_BOOK_EVENT_BOOKING_FIELD_NAME_LABEL="Name"
+COM_BOOK_EVENT_BOOKING_FIELD_EMAIL_LABEL="Email"
+COM_BOOK_EVENT_BOOKING_FIELD_EVENT_LABEL="Event"
+COM_BOOK_EVENT_BOOKING_FIELD_DATE_LABEL="Booking Date"
+COM_BOOK_EVENT_BOOKING_FIELD_STATUS_LABEL="Status"
+COM_BOOK_EVENT_BOOKING_STATUS_CONFIRMED="Confirmed"
+COM_BOOK_EVENT_BOOKING_STATUS_PENDING="Pending"
+COM_BOOK_EVENT_BOOKING_STATUS_CANCELLED="Cancelled"
+COM_BOOK_EVENT_BOOKINGS_FILTER_SEARCH_DESC="Search bookings"
+COM_BOOK_EVENT_BOOKINGS_FILTER_SEARCH_LABEL="Search Bookings"
+COM_BOOK_EVENT_BOOKINGS_FILTER_EVENT_LABEL="Filter by Event"
+COM_BOOK_EVENT_BOOKINGS_FILTER_STATUS_LABEL="Filter by Status"
 
 
 
