--- a/BookEvent/administrator/languages/en-GB/com_book_event.sys.ini
+++ b/BookEvent/administrator/languages/en-GB/com_book_event.sys.ini
@@ -10,3 +10,7 @@ COM_BOOK_EVENT_TITLE_LIST_VIEW_BOOKEVENTS_DESC="Show a list of BookEvents"
 COM_BOOK_EVENT_TITLE_ITEM_VIEW_BOOKEVENT="Single Bookevent"
 
 COM_BOOK_EVENT_TITLE_ITEM_VIEW_BOOKEVENT_DESC="Show a specific Bookevent"
+COM_BOOK_EVENT="Book Event"
+COM_BOOK_EVENT_TITLE_BOOKINGS="Bookings"
+COM_BOOK_EVENT_MENU_BOOKINGS="Manage Bookings"
+COM_BOOK_EVENT_MENU_BOOKINGS_DESC="Show the bookings management page"
